--- a/eas.json
+++ b/eas.json
@@ -1,32 +1,31 @@
 {
-  cli: {
-    version:  10.0.0,
-    requireCommit: false
+  "cli": {
+    "version": ">= 10.0.0",
+    "requireCommit": false
   },
-  build: {
-    development: {
-      developmentClient: true,
-      distribution: internal,
-      ios: {
-        simulator: true
+  "build": {
+    "development": {
+      "developmentClient": true,
+      "distribution": "internal",
+      "ios": {
+        "simulator": true
       }
     },
-    preview: {
-      distribution: internal,
-      ios: {
-        simulator: false
+    "preview": {
+      "distribution": "internal",
+      "ios": {
+        "simulator": false
       }
     },
-    production: {
-      autoIncrement: true
+    "production": {
     }
   },
-  submit: {
-    production: {
-      ios: {
-        appleId: carl@carbenconnect.com,
-        ascAppId: 6738689372,
-        appleTeamId: SPNM6V9PQ2
+  "submit": {
+    "production": {
+      "ios": {
+        "appleId": "carlborrelli@gmail.com",
+        "ascAppId": "6754711210",
+        "appleTeamId": "JYTCAQRGB2"
       }
     }
   }
