--- a/eas.json
+++ b/eas.json
@@ -1,7 +1,7 @@
 {
   "cli": {
     "version": ">= 10.0.0",
-    "requireCommit": false,
+    "requireCommit": true,
     "appVersionSource": "local"
   },
   "build": {
