--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@types/react": "~19.1.10",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
+    "eas-cli": "^16.26.0",
     "eslint": "^8.57.0",
     "eslint-config-expo": "^7.0.0",
     "eslint-config-prettier": "^9.1.0",
